fix Home page alignment

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -49,7 +49,7 @@ $black: #212529;
 /* SECONED HEADER */
 .front-text h3 {
 
-  width: 80%;
+  width: 100%;
   font-size: 50px;
   color: $cloud;
   text-align: center;
